--- a/src/OpenInfraPlatform/Forms/MainWindow.ui
+++ b/src/OpenInfraPlatform/Forms/MainWindow.ui
@@ -397,6 +397,8 @@
     <addaction name="actionCreate_Arc_Clothoid_Clothoid_Arc2"/>
     <addaction name="separator"/>
     <addaction name="actionCreateClothoid"/>
+    <addaction name="separator"/>
+    <addaction name="actionGeoreferencing"/>
    </widget>
    <widget class="QMenu" name="menuEdit">
     <property name="title">
@@ -1177,6 +1179,16 @@
   <action name="actionCreate_Accident_Report">
    <property name="text">
     <string>Create Accident Report</string>
+   </property>
+  </action>
+  <action name="actionMap_Conversion">
+   <property name="text">
+    <string>Map Conversion</string>
+   </property>
+  </action>
+  <action name="actionGeoreferencing">
+   <property name="text">
+    <string>Georeferencing</string>
    </property>
   </action>
  </widget>
