--- a/src/OpenInfraPlatform/Forms/AddGeoreferenceDialog.ui
+++ b/src/OpenInfraPlatform/Forms/AddGeoreferenceDialog.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>Dialog</class>
- <widget class="QDialog" name="Dialog">
+ <class>AddGeoreferenceDialog</class>
+ <widget class="QDialog" name="AddGeoreferenceDialog">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -52,13 +52,6 @@
         </property>
         <property name="maximum">
          <double>100000000.000000000000000</double>
-        </property>
-       </widget>
-      </item>
-      <item row="0" column="1">
-       <widget class="QLineEdit" name="lineEditInputEPSG">
-        <property name="maxLength">
-         <number>5</number>
         </property>
        </widget>
       </item>
@@ -147,6 +140,16 @@
         </item>
        </layout>
       </item>
+      <item row="0" column="1">
+       <widget class="QSpinBox" name="spinBoxEPSG">
+        <property name="minimum">
+         <number>1024</number>
+        </property>
+        <property name="maximum">
+         <number>32767</number>
+        </property>
+       </widget>
+      </item>
      </layout>
     </item>
    </layout>
@@ -157,7 +160,7 @@
   <connection>
    <sender>buttonBoxOkCancel</sender>
    <signal>rejected()</signal>
-   <receiver>Dialog</receiver>
+   <receiver>AddGeoreferenceDialog</receiver>
    <slot>reject()</slot>
    <hints>
     <hint type="sourcelabel">
@@ -173,7 +176,7 @@
   <connection>
    <sender>buttonBoxOkCancel</sender>
    <signal>accepted()</signal>
-   <receiver>Dialog</receiver>
+   <receiver>AddGeoreferenceDialog</receiver>
    <slot>accept()</slot>
    <hints>
     <hint type="sourcelabel">
