--- a/src/OpenInfraPlatform/Forms/MainWindow.ui
+++ b/src/OpenInfraPlatform/Forms/MainWindow.ui
@@ -176,16 +176,74 @@
       <property name="fieldGrowthPolicy">
        <enum>QFormLayout::AllNonFixedFieldsGrow</enum>
       </property>
-      <item row="3" column="1">
+      <property name="rowWrapPolicy">
+       <enum>QFormLayout::WrapLongRows</enum>
+      </property>
+      <property name="horizontalSpacing">
+       <number>0</number>
+      </property>
+      <property name="verticalSpacing">
+       <number>0</number>
+      </property>
+      <property name="leftMargin">
+       <number>0</number>
+      </property>
+      <property name="topMargin">
+       <number>0</number>
+      </property>
+      <property name="rightMargin">
+       <number>0</number>
+      </property>
+      <property name="bottomMargin">
+       <number>0</number>
+      </property>
+      <item row="4" column="1">
+       <widget class="QProgressBar" name="progressBarPointCloudProcessing">
+        <property name="enabled">
+         <bool>true</bool>
+        </property>
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="value">
+         <number>0</number>
+        </property>
+        <property name="alignment">
+         <set>Qt::AlignCenter</set>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="1">
        <widget class="QTabWidget" name="tabPointCloudProcessing">
         <property name="sizePolicy">
-         <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+         <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
           <horstretch>0</horstretch>
           <verstretch>1</verstretch>
          </sizepolicy>
         </property>
+        <property name="autoFillBackground">
+         <bool>false</bool>
+        </property>
+        <property name="tabPosition">
+         <enum>QTabWidget::North</enum>
+        </property>
         <property name="currentIndex">
-         <number>2</number>
+         <number>3</number>
+        </property>
+        <property name="elideMode">
+         <enum>Qt::ElideNone</enum>
+        </property>
+        <property name="usesScrollButtons">
+         <bool>true</bool>
+        </property>
+        <property name="documentMode">
+         <bool>false</bool>
+        </property>
+        <property name="tabBarAutoHide">
+         <bool>false</bool>
         </property>
         <widget class="QWidget" name="tabRendering">
          <attribute name="title">
@@ -196,11 +254,14 @@
            <rect>
             <x>9</x>
             <y>9</y>
-            <width>241</width>
+            <width>261</width>
             <height>322</height>
            </rect>
           </property>
           <layout class="QVBoxLayout" name="verticalLayout_5">
+           <property name="sizeConstraint">
+            <enum>QLayout::SetDefaultConstraint</enum>
+           </property>
            <item>
             <widget class="QCheckBox" name="checkBoxUseUniformSize">
              <property name="text">
@@ -481,11 +542,14 @@
            <rect>
             <x>9</x>
             <y>9</y>
-            <width>249</width>
+            <width>261</width>
             <height>331</height>
            </rect>
           </property>
           <layout class="QVBoxLayout" name="verticalLayout_3">
+           <property name="sizeConstraint">
+            <enum>QLayout::SetMaximumSize</enum>
+           </property>
            <item>
             <layout class="QGridLayout" name="gridLayout_6">
              <item row="0" column="2">
@@ -767,7 +831,7 @@
            <rect>
             <x>10</x>
             <y>10</y>
-            <width>241</width>
+            <width>261</width>
             <height>266</height>
            </rect>
           </property>
@@ -1034,29 +1098,71 @@
              </item>
             </layout>
            </item>
+          </layout>
+         </widget>
+        </widget>
+        <widget class="QWidget" name="tabRailways">
+         <attribute name="title">
+          <string>Railways</string>
+         </attribute>
+         <widget class="QWidget" name="verticalLayoutWidget_4">
+          <property name="geometry">
+           <rect>
+            <x>10</x>
+            <y>30</y>
+            <width>261</width>
+            <height>108</height>
+           </rect>
+          </property>
+          <layout class="QVBoxLayout" name="verticalLayout_6">
            <item>
-            <layout class="QHBoxLayout" name="horizontalLayout_5">
-             <item>
-              <widget class="QLabel" name="labelSegmentRailways">
-               <property name="sizePolicy">
-                <sizepolicy hsizetype="Maximum" vsizetype="Preferred">
-                 <horstretch>0</horstretch>
-                 <verstretch>0</verstretch>
-                </sizepolicy>
+            <layout class="QGridLayout" name="gridLayout_8">
+             <item row="2" column="1">
+              <widget class="QSpinBox" name="spinBoxNumPointsForPCA">
+               <property name="maximum">
+                <number>10000</number>
                </property>
-               <property name="text">
-                <string>Segment Railways</string>
+               <property name="value">
+                <number>100</number>
                </property>
               </widget>
              </item>
-             <item>
-              <widget class="QPushButton" name="pushButtonResetSegmentRailways">
-               <property name="text">
-                <string>Reset</string>
+             <item row="2" column="2">
+              <widget class="QDoubleSpinBox" name="doubleSpinBoxDistanceForPCA">
+               <property name="value">
+                <double>10.000000000000000</double>
                </property>
               </widget>
              </item>
-             <item>
+             <item row="1" column="0">
+              <widget class="QLabel" name="labelSegmentsFilter">
+               <property name="text">
+                <string>Segments Filter</string>
+               </property>
+              </widget>
+             </item>
+             <item row="1" column="1">
+              <widget class="QSpinBox" name="spinBoxMinSegmentPoints">
+               <property name="value">
+                <number>10</number>
+               </property>
+              </widget>
+             </item>
+             <item row="2" column="0">
+              <widget class="QLabel" name="labelPCAParameters">
+               <property name="text">
+                <string>PCA Parameters</string>
+               </property>
+              </widget>
+             </item>
+             <item row="1" column="2">
+              <widget class="QDoubleSpinBox" name="doubleSpinBoxMinSegmentLength">
+               <property name="value">
+                <double>1.000000000000000</double>
+               </property>
+              </widget>
+             </item>
+             <item row="0" column="2">
               <widget class="QPushButton" name="pushButtonApplySegmentRailways">
                <property name="sizePolicy">
                 <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
@@ -1069,30 +1175,51 @@
                </property>
               </widget>
              </item>
+             <item row="0" column="1">
+              <widget class="QPushButton" name="pushButtonResetSegmentRailways">
+               <property name="text">
+                <string>Reset</string>
+               </property>
+              </widget>
+             </item>
+             <item row="0" column="0">
+              <widget class="QLabel" name="labelSegmentRailways">
+               <property name="sizePolicy">
+                <sizepolicy hsizetype="Maximum" vsizetype="Preferred">
+                 <horstretch>0</horstretch>
+                 <verstretch>0</verstretch>
+                </sizepolicy>
+               </property>
+               <property name="text">
+                <string>Segment Railways</string>
+               </property>
+              </widget>
+             </item>
+             <item row="3" column="0">
+              <widget class="QLabel" name="labelPlotAlignment">
+               <property name="text">
+                <string>Plot</string>
+               </property>
+              </widget>
+             </item>
+             <item row="3" column="1">
+              <widget class="QComboBox" name="comboBoxSelectAlignment"/>
+             </item>
+             <item row="3" column="2">
+              <widget class="QPushButton" name="pushButtonPlotAlignment">
+               <property name="enabled">
+                <bool>true</bool>
+               </property>
+               <property name="text">
+                <string>Plot</string>
+               </property>
+              </widget>
+             </item>
             </layout>
            </item>
           </layout>
          </widget>
         </widget>
-       </widget>
-      </item>
-      <item row="4" column="1">
-       <widget class="QProgressBar" name="progressBarPointCloudProcessing">
-        <property name="enabled">
-         <bool>true</bool>
-        </property>
-        <property name="sizePolicy">
-         <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
-          <horstretch>0</horstretch>
-          <verstretch>0</verstretch>
-         </sizepolicy>
-        </property>
-        <property name="value">
-         <number>0</number>
-        </property>
-        <property name="alignment">
-         <set>Qt::AlignCenter</set>
-        </property>
        </widget>
       </item>
      </layout>
